# CMakeList.txt : CMake project for question5, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("question5")

# Add source to this project's executable.
add_executable (question5 "question5.cpp")

# TODO: Add tests and install targets if needed.
