# CMakeList.txt : CMake project for question6, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("question6")

# Add source to this project's executable.
add_executable (question6 "question6.cpp" )

# TODO: Add tests and install targets if needed.
