# CMakeList.txt : CMake project for question8, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("question8")

# Add source to this project's executable.
add_executable (question8 "question8.cpp" )

# TODO: Add tests and install targets if needed.
