# CMakeList.txt : CMake project for car_speed_game, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("car_speed_game")

# Add source to this project's executable.
add_executable (car_speed_game "main.cpp")

# TODO: Add tests and install targets if needed.
