# CMakeList.txt : CMake project for 02_equals_operator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("02_equals_operator")

# Add source to this project's executable.
add_executable (02_equals_operator "main.cpp" )

# TODO: Add tests and install targets if needed.
