# CMakeList.txt : CMake project for 05_friend_decrement_operator, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("05_friend_decrement_operator")

# Add source to this project's executable.
add_executable (05_friend_decrement_operator "main.cpp" )

# TODO: Add tests and install targets if needed.
