# CMakeList.txt : CMake project for 04_class_score, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("04_class_score")

# Add source to this project's executable.
add_executable (04_class_score "main.cpp")

# TODO: Add tests and install targets if needed.
